--- a/QuizzCard/QuizzCardQt/mainwindow.ui
+++ b/QuizzCard/QuizzCardQt/mainwindow.ui
@@ -18,7 +18,7 @@
     <property name="geometry">
      <rect>
       <x>30</x>
-      <y>10</y>
+      <y>20</y>
       <width>531</width>
       <height>51</height>
      </rect>
@@ -161,6 +161,32 @@
      <string>Exporter Paquet</string>
     </property>
    </widget>
+   <widget class="QLabel" name="label_3">
+    <property name="geometry">
+     <rect>
+      <x>30</x>
+      <y>10</y>
+      <width>61</width>
+      <height>16</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Bienvenue :</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_4">
+    <property name="geometry">
+     <rect>
+      <x>90</x>
+      <y>10</y>
+      <width>61</width>
+      <height>16</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+   </widget>
   </widget>
   <widget class="QMenuBar" name="menuBar">
    <property name="geometry">
@@ -175,8 +201,8 @@
     <property name="title">
      <string>Fichier</string>
     </property>
-    <addaction name="actionS_enregistrer"/>
-    <addaction name="actionQuitter_2"/>
+    <addaction name="actionConnexion"/>
+    <addaction name="actionQuitter"/>
    </widget>
    <widget class="QMenu" name="menuEdition">
     <property name="title">
@@ -220,52 +246,74 @@
    </attribute>
   </widget>
   <widget class="QStatusBar" name="statusBar"/>
-  <action name="actionQuitter">
-   <property name="text">
-    <string>Quitter</string>
-   </property>
-  </action>
   <action name="actionImporter">
+   <property name="checkable">
+    <bool>false</bool>
+   </property>
    <property name="text">
     <string>Importer</string>
    </property>
   </action>
   <action name="actionExporter">
+   <property name="checkable">
+    <bool>false</bool>
+   </property>
    <property name="text">
     <string>Exporter</string>
    </property>
   </action>
   <action name="actionAjouter_un_paquet">
+   <property name="checkable">
+    <bool>false</bool>
+   </property>
    <property name="text">
     <string>Ajouter un paquet</string>
    </property>
   </action>
   <action name="actionAjouter_une_carte">
+   <property name="checkable">
+    <bool>false</bool>
+   </property>
    <property name="text">
     <string>Ajouter une carte</string>
    </property>
   </action>
   <action name="actionSupprimession_paquet">
+   <property name="checkable">
+    <bool>false</bool>
+   </property>
    <property name="text">
     <string>Supprimession paquet</string>
    </property>
   </action>
   <action name="actionSuppression_carte">
+   <property name="checkable">
+    <bool>false</bool>
+   </property>
    <property name="text">
     <string>Suppression carte</string>
    </property>
   </action>
-  <action name="actionS_enregistrer">
+  <action name="actionConnexion">
+   <property name="checkable">
+    <bool>false</bool>
+   </property>
    <property name="text">
     <string>Se connecter</string>
    </property>
   </action>
-  <action name="actionQuitter_2">
+  <action name="actionQuitter">
+   <property name="checkable">
+    <bool>false</bool>
+   </property>
    <property name="text">
     <string>Quitter</string>
    </property>
   </action>
   <action name="actionAffichage_statistiques">
+   <property name="checkable">
+    <bool>false</bool>
+   </property>
    <property name="text">
     <string>Affichage statistiques</string>
    </property>
